tests/paczka1/small_fuzzy/36001318.err
Error in line 7: SgdQGCNSY A804 93,0
Error in line 14: tmNm S8 394,46
